Add screen image url to search output
