# src/gen/http/cli/server/cli.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.0.9, DO NOT EDIT.
+// Code generated by goa v3.1.2, DO NOT EDIT.
 //
 // server HTTP client CLI support package
 //
@@ -32,13 +32,28 @@ func UsageExamples() string {
 	return os.Args[0] + ` posts register --body '{
       "posts": [
          {
-            "body": "Repellat nostrum autem.",
-            "description": "Cumque voluptatem aut facere quia ipsum.",
-            "id": "Quasi voluptates.",
-            "title": "Exercitationem tempore."
+            "body": "Voluptatibus corrupti possimus.",
+            "description": "Ullam pariatur debitis asperiores quasi aut tenetur.",
+            "id": "Nostrum autem facilis ipsam nemo voluptatem est.",
+            "screenImageUrl": "Libero sint voluptatem voluptatem possimus.",
+            "title": "Laboriosam assumenda veritatis."
+         },
+         {
+            "body": "Voluptatibus corrupti possimus.",
+            "description": "Ullam pariatur debitis asperiores quasi aut tenetur.",
+            "id": "Nostrum autem facilis ipsam nemo voluptatem est.",
+            "screenImageUrl": "Libero sint voluptatem voluptatem possimus.",
+            "title": "Laboriosam assumenda veritatis."
+         },
+         {
+            "body": "Voluptatibus corrupti possimus.",
+            "description": "Ullam pariatur debitis asperiores quasi aut tenetur.",
+            "id": "Nostrum autem facilis ipsam nemo voluptatem est.",
+            "screenImageUrl": "Libero sint voluptatem voluptatem possimus.",
+            "title": "Laboriosam assumenda veritatis."
          }
       ]
-   }' --key "Ipsam nemo voluptatem."` + "\n" +
+   }' --key "Molestiae nemo quo enim corrupti quasi."` + "\n" +
 		""
 }
 
@@ -60,8 +75,8 @@ func ParseEndpoint(
 
 		postsSearchFlags        = flag.NewFlagSet("search", flag.ExitOnError)
 		postsSearchQueryFlag    = postsSearchFlags.String("query", "REQUIRED", "")
-		postsSearchPageFlag     = postsSearchFlags.String("page", "", "")
-		postsSearchPageSizeFlag = postsSearchFlags.String("page-size", "", "")
+		postsSearchPageFlag     = postsSearchFlags.String("page", "1", "")
+		postsSearchPageSizeFlag = postsSearchFlags.String("page-size", "50", "")
 	)
 	postsFlags.Usage = postsUsage
 	postsRegisterFlags.Usage = postsRegisterUsage
@@ -173,13 +188,28 @@ Example:
     `+os.Args[0]+` posts register --body '{
       "posts": [
          {
-            "body": "Repellat nostrum autem.",
-            "description": "Cumque voluptatem aut facere quia ipsum.",
-            "id": "Quasi voluptates.",
-            "title": "Exercitationem tempore."
+            "body": "Voluptatibus corrupti possimus.",
+            "description": "Ullam pariatur debitis asperiores quasi aut tenetur.",
+            "id": "Nostrum autem facilis ipsam nemo voluptatem est.",
+            "screenImageUrl": "Libero sint voluptatem voluptatem possimus.",
+            "title": "Laboriosam assumenda veritatis."
+         },
+         {
+            "body": "Voluptatibus corrupti possimus.",
+            "description": "Ullam pariatur debitis asperiores quasi aut tenetur.",
+            "id": "Nostrum autem facilis ipsam nemo voluptatem est.",
+            "screenImageUrl": "Libero sint voluptatem voluptatem possimus.",
+            "title": "Laboriosam assumenda veritatis."
+         },
+         {
+            "body": "Voluptatibus corrupti possimus.",
+            "description": "Ullam pariatur debitis asperiores quasi aut tenetur.",
+            "id": "Nostrum autem facilis ipsam nemo voluptatem est.",
+            "screenImageUrl": "Libero sint voluptatem voluptatem possimus.",
+            "title": "Laboriosam assumenda veritatis."
          }
       ]
-   }' --key "Ipsam nemo voluptatem."
+   }' --key "Molestiae nemo quo enim corrupti quasi."
 `, os.Args[0])
 }
 
@@ -192,6 +222,6 @@ search blog posts
     -page-size UINT: 
 
 Example:
-    `+os.Args[0]+` posts search --query "Assumenda veritatis." --page 16422711775956634384 --page-size 13518972489877346488
+    `+os.Args[0]+` posts search --query "Quis repellendus sit." --page 16756765372923265991 --page-size 9330543208876191118
 `, os.Args[0])
 }
