# src/gen/http/posts/server/encode_decode.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.0.9, DO NOT EDIT.
+// Code generated by goa v3.1.2, DO NOT EDIT.
 //
 // posts HTTP server encoders and decoders
 //
@@ -129,10 +129,11 @@ func DecodeSearchRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.
 // *posts.PostParams from a value of type *PostParamsRequestBody.
 func unmarshalPostParamsRequestBodyToPostsPostParams(v *PostParamsRequestBody) *posts.PostParams {
 	res := &posts.PostParams{
-		ID:          v.ID,
-		Title:       v.Title,
-		Description: v.Description,
-		Body:        v.Body,
+		ID:             v.ID,
+		Title:          v.Title,
+		Description:    v.Description,
+		ScreenImageURL: v.ScreenImageURL,
+		Body:           v.Body,
 	}
 
 	return res
@@ -142,9 +143,10 @@ func unmarshalPostParamsRequestBodyToPostsPostParams(v *PostParamsRequestBody) *
 // *PostOutputResponseBody from a value of type *posts.PostOutput.
 func marshalPostsPostOutputToPostOutputResponseBody(v *posts.PostOutput) *PostOutputResponseBody {
 	res := &PostOutputResponseBody{
-		ID:          v.ID,
-		Title:       v.Title,
-		Description: v.Description,
+		ID:             v.ID,
+		Title:          v.Title,
+		Description:    v.Description,
+		ScreenImageURL: v.ScreenImageURL,
 	}
 
 	return res
