# src/gen/http/posts/server/types.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.0.9, DO NOT EDIT.
+// Code generated by goa v3.1.2, DO NOT EDIT.
 //
 // posts HTTP server types
 //
@@ -38,6 +38,8 @@ type PostOutputResponseBody struct {
 	Title string `form:"title" json:"title" xml:"title"`
 	// Post's description
 	Description string `form:"description" json:"description" xml:"description"`
+	// Post's screen image url
+	ScreenImageURL string `form:"screenImageUrl" json:"screenImageUrl" xml:"screenImageUrl"`
 }
 
 // PostParamsRequestBody is used to define fields on request body types.
@@ -48,6 +50,8 @@ type PostParamsRequestBody struct {
 	Title *string `form:"title,omitempty" json:"title,omitempty" xml:"title,omitempty"`
 	// Post's description
 	Description *string `form:"description,omitempty" json:"description,omitempty" xml:"description,omitempty"`
+	// Post's screen image url
+	ScreenImageURL *string `form:"screenImageUrl,omitempty" json:"screenImageUrl,omitempty" xml:"screenImageUrl,omitempty"`
 	// Post's body
 	Body *string `form:"body,omitempty" json:"body,omitempty" xml:"body,omitempty"`
 }
@@ -76,16 +80,18 @@ func NewRegisterPayload(body *RegisterRequestBody, key string) *posts.RegisterPa
 		v.Posts[i] = unmarshalPostParamsRequestBodyToPostsPostParams(val)
 	}
 	v.Key = key
+
 	return v
 }
 
 // NewSearchPayload builds a posts service search endpoint payload.
 func NewSearchPayload(query string, page uint, pageSize uint) *posts.SearchPayload {
-	return &posts.SearchPayload{
-		Query:    query,
-		Page:     page,
-		PageSize: pageSize,
-	}
+	v := &posts.SearchPayload{}
+	v.Query = query
+	v.Page = page
+	v.PageSize = pageSize
+
+	return v
 }
 
 // ValidateRegisterRequestBody runs the validations defined on
